storage/projects/d4c3103d-5754-427d-95b2-2823e2b9ff35/e8f827ae-b7c0-488a-a028-f2b7114930b8_outline-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline-service
  namespace: outline-dev
  labels:
    app: outline
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: outline
