storage/projects/d4c3103d-5754-427d-95b2-2823e2b9ff35/fbf24d1d-4b7e-4d90-8d8b-466adba4159a_minio-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-external-service
  namespace: outline-dev
spec:
  type: ExternalName
  externalName: 192.168.100.22
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
