storage/projects/d4c3103d-5754-427d-95b2-2823e2b9ff35/c8527fe1-33f2-4d7a-a58f-ceb08ef80aea_minio-proxy-ingress.yaml
# minio-direct-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outline-minio-proxy-ingress
  namespace: outline-dev
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
  - host: minio-wiki.finema.dev  # ใช้ subdomain แยก
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-internal-service
            port:
              number: 9000
